# ungai

./: CHANGELOG.md  CREDITS.txt  Cargo.toml  LICENSE  README.md  cog.toml
assets/dataset/: names.txt  names.zst
src/: main.rs  markov_chain.rs  utils.rs
src/markov_chain/: order1.rs  order2.rs
