[package]
name = "ungai"
version = "0.6.1"
edition = "2024"
license = "MIT"
description = "A unique name generator based on Markov Chain"
repository = "https://github.com/syioa/ungai"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.6.0", features = ["derive"] }
dirs = "6.0.0"
ndarray = "0.17.2"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
zstd = "0.13.3"
